--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Scents by Noor | Premium Perfumes for Men & Women</title>
+    <meta name="google-site-verification" content="d0NAdQepO2mt9O_q8TaDjx9T4Ei6d1ZyjZSOci5dkhI" />
  
 
 <link rel="stylesheet" href="style.css">
